feat(catalog): 업체 조회 API 구현
- 사용자 API 연동은 추후 구현 예정 (TODO 주석 반영)